--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mongodb": "^6.17.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.6.3",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
